Fix double border in code blocks in global annotations
In the code listing itself, the `pre` elements have some styling applied
to them. This is also applied to the `pre` inside annotations (probably
unintended). Resolved by duplicating the relevant styles for `pre`
elements inside annotations.

This does duplicate the styles, but as it concerns two semantically
different elements, I don't think that's an issue.

Fixes #2224.

--- a/app/assets/stylesheets/components/code_listing.css.less
+++ b/app/assets/stylesheets/components/code_listing.css.less
@@ -177,6 +177,17 @@
       display: block;
       word-break: break-word;
 
+      // Override the normal pre padding & coloring
+      pre {
+        padding: 0;
+        background-color: transparent;
+        margin-bottom: 0;
+        border: none;
+        border-radius: 0;
+        white-space: pre-wrap;
+        line-height: 20px;
+      }
+
       // Stylize the embedded code block
       .highlighter-rouge div.highlight {
         padding: 5px 10px;
